--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   },
   "dependencies": {
     "axios": "^1.3.5",
+    "bootstrap": "^5.3.0-alpha1",
     "element-plus": "^2.3.3",
+    "pinia": "^2.0.34",
     "vue": "^3.2.36",
     "vue-router": "^4.1.6",
     "vuex": "^4.0.2"
